Add onboarding templates to client bootstrap
